--- a/information.html
+++ b/information.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/tablet.css" media="screen and (max-width: 600px)">
+    <link rel="stylesheet" href="./styles/mobile.css" media="screen and (max-width: 440px">
 </head>
 <body>
     <header class="header">
